tests/snapshots/parser__decode_osm_pbf_files@examples_t_road_length_road-gen.osm.pbf.snap
---
source: tests/parser.rs
expression: result
input_file: tests/fixtures/libosmium/examples_t_road_length_road-gen.osm.pbf
---
[
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Create {
        elem: Way,
        id: 4428564,
        ts: 1413259753000,
        val: indoc! {r#"
            osmt:highway "residential";
            osmt:lit "yes";
            osmt:maxspeed "30";
            osmt:name "Helmholtzstraße";
            osmt:postal_code "01069";
            osmt:sidewalk "both";
            osmt:smoothness "good";
            osmt:surface "asphalt";
            osmm:type "w";
            osmm:version "21"^^xsd:integer;
            osmm:user "Seandebasti";
            osmm:timestamp "2014-10-14 04:09:13 UTC"^^xsd:dateTime;
            osmm:changeset "26063898"^^xsd:integer.
            osmm:isClosed "false"^^xsd:boolean;
            osmm:loc "Point(51.02896169807248 13.724791618867215)"^^geo:wktLiteral;
        "}#",
    },
]
